# Api_Recibotou

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  TODO.md  alembic.ini  pyproject.toml  readme.md  run.py
alembic/versions/: 6a0a2cdca4b6_add_password_reset_fields_to_users.py
app/: main.py
app/api/: deps.py
app/api/routers/: analysis.py  auth.py  category.py  chat.py  entry.py  entry_type.py  goal.py  health.py  images.py  notification.py  receipts.py  users.py
app/api/services/: analysis_service.py  chat_service.py  ocr_service.py  receipt_service.py
app/core/: config.py  logger_config.py  logging.py  mail.py  security.py
app/crud/: category.py  entry.py  entry_type.py  goal.py  notification.py  user.py  user_auth.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 00128058d6c2_campo_description_users_nullable.py  2fbe68ce301b_adicionar_tabela_lancamentos.py  36f088525425_corrigir_campos_data.py  3ce003650cb3_adicionar_categoria_meta.py  43afb92b02bb_tabela_de_entry_types.py  7855bbbd1e98_adicionar_usuarios.py  885f5c49dcf1_mudar_tipo_coluna_password_rest_token_.py  9468b68a4eed_adicionar_verificacao_em_duas_etapas.py  9b5853c84df0_adiciona_relacionamento_de_usuario_em_.py  (+4 more)
app/models/: category.py  entry.py  entry_type.py  goal.py  notification.py  user.py  user_auth.py
app/schemas/: auth.py  category.py  entry.py  entry_type.py  goal.py  image.py  notification.py  ocr.py  token.py  user.py
app/services/: ocr_service.py  receipt_service.py
app/utils/: enum.py  responses.py  utility.py
